gitops/moto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moto
  namespace: moto
spec:
  selector:
    app: moto
  ports:
    - name: http
      port: 5000
      targetPort: 5000
